# gltf

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  curl.cmake  launch_test.bat  launch_test.sh  vector_math.cmake
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
cmake/: gltfConfig.cmake.in
dependencies/: draco.cmake  libfuzzer.cmake  meshoptimizer.cmake  vector_math.cmake
examples/apple/gltf-example/: gltf-example-Bridging-Header.h  gltf_config.h
examples/apple/gltf-example/gltf-example/: ContentView.swift  ObjC.m  gltf_binding.h  gltf_binding.mm  gltf_exampleApp.swift  runtime_info.h  runtime_info.m
examples/apple/gltf-example/gltf-example.xcodeproj/: project.pbxproj
examples/apple/gltf-example/gltf-example.xcodeproj/project.xcworkspace/xcuserdata/rubenleal.xcuserdatad/: UserInterfaceState.xcuserstate
examples/apple/gltf-example/gltf-example.xcodeproj/xcuserdata/rubenleal.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/apple/gltf-example/gltf-example.xcodeproj/xcuserdata/rubenleal.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/apple/gltf-example/gltf-exampleTests/: gltf_exampleTests.swift
examples/apple/gltf-example/gltf-exampleUITests/: gltf_exampleUITests.swift  gltf_exampleUITestsLaunchTests.swift
fuzz/: fuzz_glb.cpp  fuzz_gltf.cpp
fuzz/corpus/gltf/: minimal.gltf
inc/gltf/: accessor.hpp  animation.hpp  buffer.hpp  buffer_view.hpp  camera.hpp  gltf.hpp  gltf_child_of_root.hpp  image.hpp  material.hpp  mesh.hpp  node.hpp  runtime_image.hpp  runtime_info.hpp  sampler.hpp  scene.hpp  skin.hpp  texture.hpp
inc/gltf/extensions/: ext_mesh_gpu_instancing.hpp  ext_meshopt_compression.hpp  khr_animation_pointer.hpp  khr_draco_mesh_compression.hpp  khr_lights_punctual.hpp  khr_materials_variants.hpp  khr_texture_procedurals.hpp  khr_texture_transform.hpp
inc/vector_math/: mat.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  quaternion.hpp  vec.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/: gltf.cpp  gltf_config.h.in  utils.cpp  utils.hpp
test/: CMakeLists.txt  extensions.cpp  main.cpp  validation.cpp
